fix ConfigStateTest and added horde/test dev-requirement

--- a/composer.json
+++ b/composer.json
@@ -94,5 +94,8 @@
         "psr-4": {
             "Horde\\Core\\": "src/"
         }
+    },
+    "require-dev": {
+        "horde/test": "dev-FRAMEWORK_6_0 || ^3"
     }
 }
