--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "horde/core",
     "description": "Core Horde Framework library",
-    "type": "library",
+    "type": "horde-library",
     "homepage": "https://www.horde.org/libraries/Horde_Core",
     "license": "LGPL-2.1",
     "authors": [
@@ -26,103 +26,73 @@
             "role": "developer"
         }
     ],
-    "version": "2.31.15",
-    "time": "2020-09-06",
+    "time": "2021-07-14",
     "repositories": [
         {
-            "type": "pear",
-            "url": "https://pear.horde.org"
+            "type": "composer",
+            "url": "https://horde-satis.maintaina.com/"
         }
     ],
     "require": {
-        "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Alarm": "^2.2",
-        "pear-pear.horde.org/Horde_Auth": "^2.2",
-        "pear-pear.horde.org/Horde_Autoloader": "^2.1",
-        "pear-pear.horde.org/Horde_Browser": "^2",
-        "pear-pear.horde.org/Horde_Cache": "^2.5",
-        "pear-pear.horde.org/Horde_Cli": "^2",
-        "pear-pear.horde.org/Horde_Compress": "^2",
-        "pear-pear.horde.org/Horde_Compress_Fast": "^1",
-        "pear-pear.horde.org/Horde_Controller": "^2",
-        "pear-pear.horde.org/Horde_CssMinify": "^1",
-        "pear-pear.horde.org/Horde_Data": "^2",
-        "pear-pear.horde.org/Horde_Date": "^2",
-        "pear-pear.horde.org/Horde_Exception": "^2",
-        "pear-pear.horde.org/Horde_Group": "^2.1",
-        "pear-pear.horde.org/Horde_HashTable": "^1.2",
-        "pear-pear.horde.org/Horde_History": "^2",
-        "pear-pear.horde.org/Horde_Injector": "^2",
-        "pear-pear.horde.org/Horde_JavascriptMinify": "^1",
-        "pear-pear.horde.org/Horde_Lock": "^2",
-        "pear-pear.horde.org/Horde_Log": "^2",
-        "pear-pear.horde.org/Horde_LoginTasks": "^2",
-        "pear-pear.horde.org/Horde_Mime": "^2.5",
-        "pear-pear.horde.org/Horde_Mime_Viewer": "^2.2",
-        "pear-pear.horde.org/Horde_Notification": "^2",
-        "pear-pear.horde.org/Horde_Pack": "^1",
-        "pear-pear.horde.org/Horde_Perms": "^2",
-        "pear-pear.horde.org/Horde_Prefs": "^2.9",
-        "pear-pear.horde.org/Horde_Secret": "^2",
-        "pear-pear.horde.org/Horde_Serialize": "^2",
-        "pear-pear.horde.org/Horde_SessionHandler": "^2",
-        "pear-pear.horde.org/Horde_Share": "^2",
-        "pear-pear.horde.org/Horde_Support": "^2",
-        "pear-pear.horde.org/Horde_Template": "^2",
-        "pear-pear.horde.org/Horde_Token": "^2",
-        "pear-pear.horde.org/Horde_Text_Filter": "^2",
-        "pear-pear.horde.org/Horde_Translation": "^2.2",
-        "pear-pear.horde.org/Horde_Url": "^2.1",
-        "pear-pear.horde.org/Horde_Util": "^2",
-        "pear-pear.horde.org/Horde_View": "^2",
-        "pear-pear.php.net/PEAR": "*",
+        "horde/horde-installer-plugin": "dev-FRAMEWORK_6_0 || *",
+        "php": "^7",
+        "horde/alarm": "^3 || dev-FRAMEWORK_6_0",
+        "horde/auth": "^3 || dev-FRAMEWORK_6_0",
+        "horde/autoloader": "^3 || dev-FRAMEWORK_6_0",
+        "horde/browser": "^3 || dev-FRAMEWORK_6_0",
+        "horde/cache": "^3 || dev-FRAMEWORK_6_0",
+        "horde/cli": "^3 || dev-FRAMEWORK_6_0",
+        "horde/compress": "^3 || dev-FRAMEWORK_6_0",
+        "horde/compress_fast": "^2 || dev-FRAMEWORK_6_0",
+        "horde/controller": "^3 || dev-FRAMEWORK_6_0",
+        "horde/cssminify": "^2 || dev-FRAMEWORK_6_0",
+        "horde/data": "^3 || dev-FRAMEWORK_6_0",
+        "horde/date": "^3 || dev-FRAMEWORK_6_0",
+        "horde/exception": "^3 || dev-FRAMEWORK_6_0",
+        "horde/group": "^3 || dev-FRAMEWORK_6_0",
+        "horde/hashtable": "^2 || dev-FRAMEWORK_6_0",
+        "horde/history": "^3 || dev-FRAMEWORK_6_0",
+        "horde/injector": "^3 || dev-FRAMEWORK_6_0",
+        "horde/javascriptminify": "^2 || dev-FRAMEWORK_6_0",
+        "horde/lock": "^3 || dev-FRAMEWORK_6_0",
+        "horde/log": "^3 || dev-FRAMEWORK_6_0",
+        "horde/logintasks": "^3 || dev-FRAMEWORK_6_0",
+        "horde/mime": "^3 || dev-FRAMEWORK_6_0",
+        "horde/mime_viewer": "^3 || dev-FRAMEWORK_6_0",
+        "horde/notification": "^3 || dev-FRAMEWORK_6_0",
+        "horde/pack": "^2 || dev-FRAMEWORK_6_0",
+        "horde/perms": "^3 || dev-FRAMEWORK_6_0",
+        "horde/prefs": "^3 || dev-FRAMEWORK_6_0",
+        "horde/secret": "^3 || dev-FRAMEWORK_6_0",
+        "horde/serialize": "^3 || dev-FRAMEWORK_6_0",
+        "horde/sessionhandler": "^3 || dev-FRAMEWORK_6_0",
+        "horde/share": "^3 || dev-FRAMEWORK_6_0",
+        "horde/support": "^3 || dev-FRAMEWORK_6_0",
+        "horde/template": "^3 || dev-FRAMEWORK_6_0",
+        "horde/token": "^3 || dev-FRAMEWORK_6_0",
+        "horde/text_filter": "^3 || dev-FRAMEWORK_6_0",
+        "horde/translation": "^3 || dev-FRAMEWORK_6_0",
+        "horde/url": "^3 || dev-FRAMEWORK_6_0",
+        "horde/util": "^3 || dev-FRAMEWORK_6_0",
+        "horde/view": "^3 || dev-FRAMEWORK_6_0",
+        "pear/pear": "*",
         "ext-session": "*"
     },
+    "require-dev": {},
     "suggest": {
-        "pear-pear.horde.org/Horde_ActiveSync": "^2.40",
-        "pear-pear.horde.org/Horde_Backup": "^1",
-        "pear-pear.horde.org/Horde_Crypt": "^2",
-        "pear-pear.horde.org/Horde_Dav": "^1",
-        "pear-pear.horde.org/Horde_Db": "^2",
-        "pear-pear.horde.org/Horde_Editor": "^2",
-        "pear-pear.horde.org/Horde_ElasticSearch": "^1",
-        "pear-pear.horde.org/Horde_Form": "^2.0.15",
-        "pear-pear.horde.org/Horde_Http": "^2",
-        "pear-pear.horde.org/Horde_Icalendar": "^2",
-        "pear-pear.horde.org/Horde_Image": "^2.3",
-        "pear-pear.horde.org/Horde_Imap_Client": "^2",
-        "pear-pear.horde.org/Horde_JavascriptMinify_Jsmin": "^1",
-        "pear-pear.horde.org/Horde_Kolab_Server": "^2",
-        "pear-pear.horde.org/Horde_Kolab_Session": "^2",
-        "pear-pear.horde.org/Horde_Kolab_Storage": "^2",
-        "pear-pear.horde.org/Horde_Ldap": "^2",
-        "pear-pear.horde.org/Horde_Mail": "^2.3",
-        "pear-pear.horde.org/Horde_Mongo": "^1",
-        "pear-pear.horde.org/Horde_Nls": "^2",
-        "pear-pear.horde.org/Horde_Oauth": "^2",
-        "pear-pear.horde.org/Horde_Queue": "^1",
-        "pear-pear.horde.org/Horde_Routes": "^2",
-        "pear-pear.horde.org/Horde_Service_Twitter": "^2",
-        "pear-pear.horde.org/Horde_SpellChecker": "^2",
-        "pear-pear.horde.org/Horde_Test": "^2.6",
-        "pear-pear.horde.org/Horde_Tree": "^2",
-        "pear-pear.horde.org/Horde_Vfs": "^2.2",
-        "pear-pear.php.net/Net_DNS2": "^1.3",
-        "pear-pear.php.net/Text_CAPTCHA": "*",
-        "pear-pear.php.net/Text_Figlet": "*",
-        "pear-pear.php.net/Text_LanguageDetect": "*",
+        "pear/text_captcha": "*",
+        "pear/text_figlet": "*",
         "ext-dom": "*",
         "ext-hash": "*",
         "ext-SimpleXML": "*",
         "ext-sockets": "*"
     },
-    "replace": {
-        "pear-pear.horde.org/Horde_Core": "2.*",
-        "pear-horde/Horde_Core": "2.*"
-    },
     "autoload": {
-        "psr-0": {
-            "Horde": "lib/"
+        "classmap": [
+            "lib/"
+        ],
+        "psr-4": {
+            "Horde\\Core\\": "src/"
         }
     }
 }
