fix ci job / composer.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,7 @@ jobs:
     - name: Install horde/test dependency and other dependencies
       run: |
         ## For unclear reasons, github action fails randomly if we do not install before we require.
+        COMPOSER_ROOT_VERSION=dev-FRAMEWORK_6_0 composer config minimum-stability dev
         COMPOSER_ROOT_VERSION=dev-FRAMEWORK_6_0 composer install
-        COMPOSER_ROOT_VERSION=dev-FRAMEWORK_6_0 composer require --dev horde/test dev-FRAMEWORK_6_0 horde/log ^3
-    - name: install horde/test ^3
-      run: composer require horde/test ^3
-    - name: install horde/http ^3
-      run: composer require horde/http ^3
     - name: run phpunit
       run: phpunit --bootstrap test/Horde/Core/bootstrap.php test/Horde/Core/
