update phpunit.xml.dist and put horde/test in .horde.yml as dev dep

--- a/.horde.yml
+++ b/.horde.yml
@@ -99,6 +99,9 @@ dependencies:
       hash: '*'
       SimpleXML: '*'
       sockets: '*'
+  dev:
+    composer:
+      horde/test: ^3
 autoload:
   classmap:
     - lib/
