moved tests from /test/Horde/Core/ to /test and adjusted where needed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
         COMPOSER_ROOT_VERSION=dev-FRAMEWORK_6_0 composer config minimum-stability dev
         COMPOSER_ROOT_VERSION=dev-FRAMEWORK_6_0 composer install
     - name: run phpunit
-      run: phpunit --bootstrap test/Horde/Core/bootstrap.php test/Horde/Core/
+      run: phpunit --bootstrap test/bootstrap.php
