--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,12 +1,26 @@
-<phpunit bootstrap="test/Horde/Core/bootstrap.php" colors="true">
-  <coverage>
-    <include>
-      <directory suffix=".php">lib</directory>
-    </include>
-  </coverage>
-  <testsuites>
-    <testsuite name="horde/core">
-      <directory>test</directory>
-    </testsuite>
-  </testsuites>
+<?xml version="1.0" encoding="UTF-8"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.5/phpunit.xsd"
+         bootstrap="test/bootstrap.php"
+         cacheResultFile=".phpunit.cache/test-results"
+         executionOrder="depends,defects"
+         forceCoversAnnotation="false"
+         beStrictAboutCoversAnnotation="true"
+         beStrictAboutOutputDuringTests="true"
+         beStrictAboutTodoAnnotatedTests="true"
+         failOnRisky="true"
+         failOnWarning="true"
+         verbose="false">
+    <testsuites>
+        <testsuite name="horde/core">
+            <directory>test</directory>
+        </testsuite>
+    </testsuites>
+
+    <coverage cacheDirectory=".phpunit.cache/code-coverage"
+              processUncoveredFiles="true">
+        <include>
+            <directory suffix=".php">src</directory>
+        </include>
+    </coverage>
 </phpunit>
