Development mode for Core-3.0.0alpha10

--- a/doc/Horde/Core/changelog.yml
+++ b/doc/Horde/Core/changelog.yml
@@ -1,4 +1,15 @@
 ---
+3.0.0alpha10:
+  api: 3.0.0alpha6
+  state:
+    release: alpha
+    api: alpha
+  date: 2021-12-01
+  license:
+    identifier: LGPL-2.1
+    uri: http://www.horde.org/licenses/lgpl21
+  notes: |+
+    
 3.0.0alpha9:
   api: 3.0.0alpha6
   state:
