--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "minimum-stability": "dev",
     "name": "horde/core",
     "description": "Core Horde Framework library",
     "type": "horde-library",
