--- a/.horde.yml
+++ b/.horde.yml
@@ -40,7 +40,7 @@ state:
   release: alpha
   api: alpha
 license:
-  identifier: LGPL-2.1
+  identifier: LGPL-2.1-only
   uri: http://www.horde.org/licenses/lgpl21
 dependencies:
   required:
